--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adventofcode-2021",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:KoningSanderPander/adventofcode-2021.git",
   "author": "Sander <54803741+KoningSanderPander@users.noreply.github.com>",
   "adventConfig": {
@@ -9,7 +9,6 @@
     "nameTemplate": "day{{num}}.js",
     "templateFile": "node_modules/advent-of-code/src/templates/day.js"
   },
-
   "license": "MIT",
   "dependencies": {
     "advent-of-code": "^5.0.0"
